--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div id="nav">
       <% if current_user %>
         <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
-        <%= link_to "Logout", :logout, method: :post %>
+        <%= link_to "Logout", :logout, method: :delete %>
       <% else %>
         <%= link_to "Register", new_user_path %> |
         <%= link_to "Login", :login %>
