--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome Rails Sample App.</h1>
 <p>
-  <a href="/posts/">投稿（要認証）</a>
+  <a href="/posts/" class="btn btn-info">投稿（要認証）</a>
 </p>
