--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,17 +11,24 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+  <div class="form-group row">
+    <%= form.label :title, class: "col-form-label col-sm-1" %>
+    <div class="col-sm-6">
+      <%= form.text_field :title, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
+  <div class="form-group row">
+    <%= form.label :body, class: "col-form-label col-sm-1" %>
+    <div class="col-sm-6">
+      <%= form.text_area :body, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group row">
+    <div class="col-sm-6">
+      <%= form.submit class: "btn btn-primary" %>
+    </div>
+
   </div>
 <% end %>
