--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,17 @@
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
+<form>
+  <div class="form-group row">
+    <label for="show_post_title" class="col-sm-1 col-form-label">Title</label>
+    <div class="col-sm-6">
+      <input type="text" id="show_post_title" class="form-control-plaintext" value="<%= @post.title %>" readonly>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="show_post_body" class="col-sm-1 col-form-label">Body</label>
+    <div class="col-sm-6">
+      <textarea id="show_post_body" readonly><%= @post.body %></textarea>
+    </div>
+  </div>
+</form>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
