--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,5 +13,4 @@
   </div>
 </form>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Edit', edit_post_path(@post), class: "btn btn-primary" %> <%= link_to 'Back', posts_path, class: "btn btn-secondary" %>
