ログイン情報を表すnavの各種linkにbootstrapのbtnスタイルを付与

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,11 @@
     <div class="container-fluid">
       <div id="nav">
         <% if current_user %>
-          <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
-          <%= link_to "Logout", :logout, method: :delete %>
+          <%= link_to "Edit Profile", edit_user_path(current_user.id), class: "btn btn-warning" %>
+          <%= link_to "Logout", :logout, method: :delete, class: "btn btn-danger" %>
         <% else %>
-          <%= link_to "Register", new_user_path %> |
-          <%= link_to "Login", :login %>
+          <%= link_to "Register", new_user_path, class: "btn btn-primary" %> |
+          <%= link_to "Login", :login, class: "btn btn-success" %>
         <% end %>
       </div>
       <div>
