--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,22 +11,30 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+  <div class="form-group row">
+    <%= form.label :email, class: "col-form-label col-sm-1" %>
+    <div class="col-sm-6">
+      <%= form.text_field :email, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
+  <div class="form-group row">
+    <%= form.label :password, class: "col-form-label col-sm-1" %>
+    <div class="col-sm-6">
+      <%= form.password_field :password, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
+  <div class="form-group row">
+    <%= form.label :password_confirmation, class: "col-form-label col-sm-1" %>
+    <div class="col-sm-6">
+      <%= form.password_field :password_confirmation, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group row">
+    <div class="col-sm-6">
+      <%= form.submit class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
