textareaにbootstrapのスタイルを付与

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
   <div class="form-group row">
     <label for="show_post_body" class="col-sm-1 col-form-label">Body</label>
     <div class="col-sm-6">
-      <textarea id="show_post_body" readonly><%= @post.body %></textarea>
+      <textarea id="show_post_body" readonly class="form-control"><%= @post.body %></textarea>
     </div>
   </div>
 </form>
