--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: post, local: true) do |form| %>
   <% if post.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert alert-danger">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
       <ul>
@@ -12,14 +12,18 @@
   <% end %>
 
   <div class="form-group row">
-    <%= form.label :title, class: "col-form-label col-sm-1" %>
+    <div class="col-sm-1">
+      <%= form.label :title, class: "col-form-label" %>
+    </div>
     <div class="col-sm-6">
       <%= form.text_field :title, class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= form.label :body, class: "col-form-label col-sm-1" %>
+    <div class="col-sm-1">
+      <%= form.label :body, class: "col-form-label" %>
+    </div>
     <div class="col-sm-6">
       <%= form.text_area :body, class: "form-control" %>
     </div>
