change user form.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :crypted_password %>
-    <%= form.text_field :crypted_password %>
+    <%= form.label :password %>
+    <%= form.text_field :password %>
   </div>
 
   <div class="field">
-    <%= form.label :salt %>
-    <%= form.text_field :salt %>
+    <%= form.label :password_confirmation %>
+    <%= form.text_field :password_confirmation %>
   </div>
 
   <div class="actions">
