--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,17 @@
   </head>
 
   <body>
-    <div id="id">
-      <% if current_user %>
-        <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
-        <%= link_to "Logout", :logout, method: :post %>
-      <% else %>
-        <%= link_to "Register", new_user_path %>
-        <%= link_to "Login", :login %>
-      <% end %>
-    </div>
+    <nav class="navbar navbar-dark bg-dark">
+      <div id="id">
+        <% if current_user %>
+          <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
+          <%= link_to "Logout", :logout, method: :post %>
+        <% else %>
+          <%= link_to "Register", new_user_path %>
+          <%= link_to "Login", :login %>
+        <% end %>
+      </div>
+    </nav>
     <div class="container-fluid">
       <%= yield %>
     </div>
