--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,19 @@
     </nav>
     <div class="container-fluid">
       <% if flash[:notice].present? %>
-        <div id="notice" class="alert alert-primary" role="alert">
+        <div id="notice" class="alert alert-primary alert-dismissible fade show" role="alert">
           <%= flash[:notice] %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
       <% end %>
       <% if flash[:alert].present? %>
-        <div id="alert" class="alert alert-danger" role="alert">
+        <div id="alert" class="alert alert-danger alert-dismissible fade show" role="alert">
           <%= flash[:alert] %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
       <% end %>
       <%= yield %>
