--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,5 +23,9 @@
 
   <div class="actions">
     <%= form.submit class: 'btn btn-primary' %>
+    <% unless post.new_record? %>
+      <%= link_to 'Show', post, class: 'btn btn-primary' %>
+    <% end %>
+    <%= link_to 'Back', posts_path, class: 'btn btn-primary' %>
   </div>
 <% end %>
