--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,5 +28,6 @@
 
   <div class="actions">
     <%= form.submit class: 'btn btn-primary' %>
+    <%= link_to 'Back', root_path, class: 'btn btn-primary' %>
   </div>
 <% end %>
