--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,6 @@
 <% if object.errors.any? %>
     <div id="error_explanation"  class="alert alert-danger alert-dismissible fade show" role="alert">
+        <h2><%= pluralize(object.errors.count, "error") %> prohibited this <%= object.class.name %> from being saved:</h2>
         <ul>
             <% object.errors.full_messages.each do |message| %>
                 <li><%= message %></li>
