--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,4 @@
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %> |
-<%= link_to 'Back', users_path, class: 'btn btn-primary' %>
+<%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %>
