--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,6 +18,6 @@
 
   <div class="actions">
     <%= form.submit class: 'btn btn-primary' %>
-    <%= link_to 'Back', root_path, class: 'btn btn-primary' %>
+    <%= link_to 'Back to Root path', root_path, class: 'btn btn-primary' %>
   </div>
 <% end %>
