add a button to Root path.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,3 +6,4 @@
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %>
+<%= link_to 'Back to Root path', root_path, class: 'btn btn-primary' %>
