--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,4 +1,7 @@
-<p id="notice"><%= notice %></p>
+<p id="notice" class="alert alert-primary alert-dismissible" role="alert">
+  <%= notice %>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</p>
 
 <p>
   <strong>Title:</strong>
