--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,6 @@
-<p style="color: green"><%= notice %></p>
+<% if notice.present? %>
+  <p class="alert alert-primary"><%= notice %></p>
+<% end %>
 
 <h1>Posts</h1>
 
@@ -6,9 +8,9 @@
   <% @posts.each do |post| %>
     <%= render post %>
     <p>
-      <%= link_to "Show this post", post %>
+      <%= link_to "Show this post", post, class: 'btn btn-primary' %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New post", new_post_path %>
+<%= link_to "New post", new_post_path, class: 'btn btn-primary' %>
