--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body id='<%= "#{controller.controller_name}_#{controller.action_name}" %>'>
     <div class="container">
       <%= yield %>
     </div>
