--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div>
-    <%= form.label :title, class: 'form-label' %>
-    <%= form.text_field :title, class: 'form-control' %>
+    <%= form.label :title, class: "form-label" %>
+    <%= form.text_field :title, class: "form-control" %>
   </div>
 
   <div>
-    <%= form.label :body, class: 'form-label' %>
-    <%= form.text_area :body, class: 'form-control' %>
+    <%= form.label :body, class: "form-label" %>
+    <%= form.text_area :body, class: "form-control" %>
   </div>
 
   <div>
-    <%= form.submit 'Create/Update Post', class: 'btn btn-primary' %>
+    <%= form.submit "Create/Update Post", class: "btn btn-primary" %>
   </div>
 <% end %>
