--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,9 +8,9 @@
   <% @posts.each do |post| %>
     <%= render post %>
     <p>
-      <%= link_to "Show this post", post, class: 'btn btn-primary' %>
+      <%= link_to "Show this post", post, class: "btn btn-primary" %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New post", new_post_path, class: 'btn btn-primary' %>
+<%= link_to "New post", new_post_path, class: "btn btn-primary" %>
