--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,8 +5,8 @@
 <%= render @post %>
 
 <div>
-  <%= link_to "Edit this post", edit_post_path(@post), class: 'btn btn-primary' %> |
-  <%= link_to "Back to posts", posts_path, class: 'btn btn-primary' %>
+  <%= link_to "Edit this post", edit_post_path(@post), class: "btn btn-primary" %> |
+  <%= link_to "Back to posts", posts_path, class: "btn btn-primary" %>
 
-  <%= button_to "Destroy this post", @post, {method: :delete, class: 'btn btn-primary'} %>
+  <%= button_to "Destroy this post", @post, {method: :delete, class: "btn btn-primary"} %>
 </div>
