--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this post", @post, class: 'btn btn-primary' %> |
-  <%= link_to "Back to posts", posts_path, class: 'btn btn-primary' %>
+  <%= link_to "Show this post", @post, class: "btn btn-primary" %> |
+  <%= link_to "Back to posts", posts_path, class: "btn btn-primary" %>
 </div>
