--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to posts", posts_path, class: 'btn btn-primary' %>
+  <%= link_to "Back to posts", posts_path, class: "btn btn-primary" %>
 </div>
