--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <h1 class="text-3xl font-bold underline">Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
 
-<%= link_to "Back to posts", posts_path %>
+<%= link_to "Go to posts", posts_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
